--- a/css/main.css
+++ b/css/main.css
@@ -304,8 +304,8 @@ h6{
 
 img {
 display:block !important;
-margin-left:auto;
-margin-right:auto;
-margin-top:10px;
-margin-bottom:10px
+margin-left:auto !important;
+margin-right:auto !important;
+margin-top:10px !important;
+margin-bottom:20px !important;
 }
