--- a/css/main.css
+++ b/css/main.css
@@ -64,26 +64,26 @@
 }
 
 @page {
-    margin-top: 80mm;
+    margin-top: 78mm;
     margin-left: 15mm;
     margin-right: 15mm;
     border-top: 1px solid var(--secundario-blanco);
     border-bottom: 1px solid var(--secundario-blanco);
-    margin-bottom: 15mm;
+    margin-bottom: 16mm;
     padding-top: 10px;
     padding-bottom: 10px;
     @bottom-right{
         content: "Pagina " counter(page) " de " counter(pages);
         vertical-align: top;
         padding-top: 10px;
-        font-size: 7px !important;
-        text-transform: uppercase;
-        font-weight: bold;
+        justify-content: end;
+        
       }
       @bottom-left{
-        padding-top: 10px;
+       
         content:element(texto-izquierda);
         vertical-align: top;
+        padding-top: 10px;
     }
     @top-center{
         content: element(header);        
@@ -108,6 +108,7 @@
     }
     
   }
+ 
   div{
     font-size: small;
     color: var(--secundario-oscuro);
@@ -141,6 +142,7 @@
     border: 1px solid var(--primario);
     height: fit-content;
     overflow: hidden;
+    width: 150px;
  }
 .texto-izquierda{
     position: running(texto-izquierda);
@@ -168,11 +170,12 @@
 }
 .logotipo{
     display: flex;
-    justify-content: center;
+    justify-content: end;
 }
 .logotipo img{
     max-height: 70px;
     max-width: 200px;
+    cursor: pointer;
 }
 .cabecera2{
     
@@ -237,7 +240,8 @@ font-weight: bold;
     display: block;
     text-align: left;
     text-transform: uppercase;
-
+    color: var(--primario);
+    padding-bottom: 10px;
  }
  br{
     display: none;
@@ -259,6 +263,9 @@ font-weight: bold;
     margin-bottom: 10px;
     width: 100%;
     page-break-inside: avoid;
+    border: 1px solid var(--primario-blanco);
+    padding: 5px;
+    border-radius:7px;
 }
 .caja-infop{
     display: flex;
@@ -270,10 +277,12 @@ font-weight: bold;
     text-align: left;
     text-transform: uppercase;
     font-weight: bold;
+    color: var(--primario);
 }
 .caja-infop .cargo{
     text-align: left;
     font-size: smaller;
+    color: var(--secundario);
 }
 .caja-firma{
     display: flex;
@@ -285,19 +294,51 @@ font-weight: bold;
 .firma-elec{
     
     padding-top: 5px;
-    border-top: 1px solid black;
+    border-top: 1px solid var(--secundario-blanco);
     font-size: smaller;
     margin-left: 10px;
+    color: var(--secundario);
 }
 h6{
-    font-weight: bolder;
+    font-weight: bolder !important;
     text-transform: uppercase;
-    
+    font-size:medium !important;
+    color:var(--primario-oscuro) !important;
     string-set: titulo content(text);
+    text-align: center;
+    background-color: var(--primario-claro);
+    padding: 5px !important;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .adjuntos{
     border-radius: 10px;
     border: 1px solid var(--primario-claro);
     padding: 10px;
+}
+.divisor{
+    height: 20px;
+    width: 100%;
+    content: '';
+}
+.btn-print{
+    background-color:var(--primario);
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    color: white;
+    font-size: medium;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.45);
+-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.45);
+box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.45);
+}
+.icon-printer{
+    width: 30px;
 }
